# BIG_FINANCE

./: .gitignore  README.md  manage.py  pyproject.toml
Big_Finance/: asgi.py  settings.py  urls.py  wsgi.py
contas/: urls.py  views.py
contas/templates/: definir_contas.html  ver_contas.html
extrato/: urls.py  views.py
extrato/templates/: dashboard.html  novo_valor.html  view_extrato.html
perfil/: models.py  urls.py  views.py
perfil/templates/: gerenciar.html  home.html
planejamento/: urls.py  views.py
planejamento/templates/: definir_planejamento.html  ver_planejamento.html
templates/base/: base.html
templates/bases/: base.html
templates/static/geral/css/: base.css
templates/static/perfil/css/: home.css
