[tool.poetry]
name = "Big_Finance"
version = "0.1.0"
description = ""
authors = ["SuperFeliz <linuxeopoder@gmail.com>"]
readme = "README.md"
packages = [{include = "Big_Finance"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"
python-decouple = "^3.8"
weasyprint = "^59.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
